# passring-agency-server

./: .env  Cargo.toml  Dockerfile
.github/workflows/: docker-publish.yml
migrations/2024-05-12-054455_init/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/api/: mod.rs  voting.rs
src/models/: mod.rs  vote.rs  votings.rs
