[package]
name = "passring-agency-server"
version = "0.1.1"
edition = "2021"

[dependencies]
diesel = { version = "2.1.6", features = ["postgres", "uuid"] }
dotenvy = "0.15.7"
rocket = { version = "0.5.0", features = ["json", "uuid"] }
serde = { version = "1.0.201", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
passring = { version = "0.1.0", git = "https://github.com/passring/passring" }
hex = { version = "0.4.3", features = ["serde"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
rocket_cors = "0.6.0"
